compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__function_formatting-4.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 63
expression: "\npub fn math(x, y) {\n  fn() {\n    x + y\n    x - y\n    2 * x\n  }\n}"
---
export function math(x, y) {
  return () => {
    x + y;
    x - y;
    return Math.imul(2, x);
  };
}

