compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__function_formatting.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn add(the_first_variable_that_should_be_added, the_second_variable_that_should_be_added) {\n  the_first_variable_that_should_be_added + the_second_variable_that_should_be_added\n}"
---
----- SOURCE CODE

pub fn add(the_first_variable_that_should_be_added, the_second_variable_that_should_be_added) {
  the_first_variable_that_should_be_added + the_second_variable_that_should_be_added
}

----- COMPILED JAVASCRIPT
export function add(
  the_first_variable_that_should_be_added,
  the_second_variable_that_should_be_added
) {
  return the_first_variable_that_should_be_added + the_second_variable_that_should_be_added;
}
