compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__function_formatting_typescript-2.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function(x, y) {\nx + y\n}"
---
export function this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function(
  x: number,
  y: number
): number;

