compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__function_literals_get_properly_wrapped-3.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn main() {\n  { let a = fn(n) { n + 1 } }(10)\n}\n"
---
export function main() {
  return ((n) => { return n + 1; })(10);
}

